# llama_cpp_dart

./: .gitignore  .gitmodules  .metadata  .pubignore  BUILD.md  CHANGELOG.md  HANDOFF.md  HANDOFF_M10.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MIGRATION.md  README.md  VISION_AND_VIDEO.md  analysis_options.yaml  diagnose_libraries.sh  fix_dylib_paths.sh  llama_cpp.podspec  plan.md  pubspec.yaml  rag_log.txt  update_submodules.sh
.github/workflows/: build-android.yml  build-apple.yml  test.yml
android/: build-android-aar.sh  build.gradle  settings.gradle
android/llamalib/: build.gradle
android/llamalib/src/androidTest/java/io/github/netdur/llama_cpp_dart/llamalib/: ExampleInstrumentedTest.java
android/src/main/: AndroidManifest.xml
darwin/: Info.plist  check_libs.sh  create_xcframework.sh  fix_rpath.sh  no_bundle.cmake  run_build.sh
doc/: chat.md  context_params.md  context_swapping.md  flutter.md  isolate.md  llama.md  llama_cpp.md  llama_processor.md  llama_split_mode.md  model_params.md  prompt_format.md  sampler_params.md  sequence_filter.md
example/: README.md  agent.dart  apple_pie.dart  apple_pie.qwq.dart  apple_pie.r1.dart  arabic_correction.dart  auto_trim.dart  bench_service.dart  cache.dart  chat.dart  chat_cli.dart  chat_cli_isolated.dart  chat_session.dart  cli.dart  coder.dart  embedding_raw.dart  main.dart  math.qwen.dart  math.r1.dart  mcp_agent.dart  mcp_server.dart  mcp_test.dart  notes.dart  ocr.dart  persist_name_session.dart  pie.txt  pubspec.yaml  rag.dart  reasoning.dart  research.dart  rp.dart  simple.dart  simple_concurrent.dart  test.dart  test.jailbreak.dart  test_embedding.dart  test_finetune.dart  test_isolated.dart  test_isolated_scope.dart  test_multimodal_concurrent.dart  (+18 more)
example/android/: local.properties
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/llama_cpp_dart_example/: MainActivity.kt
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/probes/: audio_describe.dart  chat_two_turn.dart  decode_one_batch.dart  dump_template.dart  engine_backends.dart  engine_stream.dart  gemma_audio.dart  gemma_chat.dart  gemma_video.dart  gemma_vision.dart  generate_stream.dart  inspect_model.dart  inspect_template.dart  list_backends.dart  list_special_tokens.dart  save_resume.dart  speculative_generate.dart  tokenize_round_trip.dart  version_info.dart  video_describe.dart  vision_describe.dart
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
include/: llama.h
ios/: llama_cpp_dart.podspec
ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
lib/: example.dart  float_array.dart  gpt_params.dart  inference_parameters.dart  int_array.dart  llama.dart  llama_cpp.dart  llama_cpp_dart.dart  llama_cpp_dart_bindings_generated.dart  llama_cpp_dart_ffi.dart  llama_processor.dart  llm.dart  model_manager.dart  model_params.dart  output.dart
lib/src/: alpaca_filter.dart  alpaca_format.dart  chat.dart  chat_ml_filter.dart  chatml_format.dart  completion_event.dart  context_params.dart  gemini_format.dart  gemma_format.dart  harmony_format.dart  isolate_child.dart  isolate_parent.dart  isolate_scope.dart  isolate_types.dart  llama.dart  llama_cpp.dart  llama_input.dart  llama_processor.dart  llama_service.dart  llama_split_mode.dart  model_params.dart  new_llama.dart  prompt_format.dart  sampler_params.dart  sampling_context.dart  sampling_params.dart  sequence_filter.dart  text_chunker.dart  version.dart
lib/src/adapter/: lora.dart
lib/src/batch/: batch.dart
lib/src/chat/: chat.dart  chat_message.dart  chat_template.dart  completion_event.dart  known_templates.dart
lib/src/context/: context.dart  context_params.dart
lib/src/core/: context_params.dart  llama.dart  llama_input.dart  llama_service.dart  llama_session_io.dart  llama_slot.dart  llama_types.dart  model_params.dart  sampler_params.dart
lib/src/core/service/: model_cache.dart  pending_item.dart  sampler_factory.dart  session.dart  state_codec.dart  utf8_accumulator.dart  vision_helper.dart
lib/src/diagnostics/: perf.dart
lib/src/ffi/: backends.dart  bindings.dart  library_loader.dart  log.dart
lib/src/generation/: batch_embedder.dart  context_shift.dart  embedding.dart  event.dart  generator.dart  mtp.dart  request.dart  speculative.dart  stop.dart
lib/src/isolate/: engine.dart  isolate_child.dart  isolate_parent.dart  isolate_scope.dart  isolate_types.dart  messages.dart  worker.dart
lib/src/mcp/: mcp_client.dart  mcp_server.dart  mcp_server_tool.dart
lib/src/model/: model.dart  model_params.dart  split_path.dart  vocab.dart
lib/src/multimodal/: media.dart  mtmd_bitmap.dart  mtmd_chunks.dart  multimodal_context.dart  multimodal_params.dart
lib/src/prompt/: chatml_format.dart  chatml_thinking_format.dart  gemma_format.dart  harmony_format.dart  prompt_format.dart
lib/src/sampling/: sampler.dart  sampler_factory.dart  sampler_params.dart
lib/src/session/: session.dart  state_codec.dart  state_seq_flags.dart
lib/src/tokenizer/: tokenizer.dart  utf8_accumulator.dart
lib/src/types/: exceptions.dart
linux/: CMakeLists.txt
linux/flutter/ephemeral/.plugin_symlinks/: path_provider_linux
macos/: llama_cpp_dart.podspec
macos/Flutter/ephemeral/: Flutter-Generated.xcconfig  flutter_export_environment.sh
src/: CMakeLists.txt  llama_cpp_dart.h  llama_cpp_dart.mm
test/: batch_embed_test.dart  chat_test.dart  context_shift_test.dart  engine_test.dart  generation_test.dart  llama_cpp_dart_test.dart  multimodal_test.dart  params_test.dart  persistence_test.dart  smoke_test.dart  speculative_test.dart  text_chunker_test.dart  utf8_accumulator_test.dart  video_test.dart
test/prompt/: chatml_thinking_test.dart
tool/: build_android_aar.sh  build_android_hexagon_aar.sh  build_apple_xcframework.sh  build_native.sh  generate_version.sh  probe_cancel.dart  probe_mtp.dart  probe_prenorm.dart
ubuntu/: run_build.sh
windows/: CMakeLists.txt
(+1 files in other folders)
